maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:2: error: Missing closing brace `}' assumed here
override def run() {var anglesum:Int=0;
^PledgeMaze:2: error: expected start of definition
override def run() {var anglesum:Int=0;
         ^